# src/api/handlers/health.go
@@ -15,8 +15,16 @@ func NewHealthHandler() *HealthHandler {
 	return &HealthHandler{}
 }
 
+// HealthCheck godoc
+// @Summery Health Check
+// @Description Health Check
+// @Tags health
+// @Accept json
+// @Produce json
+// @Success 200 {object} helper.BaseHttpResponse "Success"
+// @Failure 400 {object} helper.BaseHttpResponse "Failed"
+// @Router /v1/health/ [get]
 func (h *HealthHandler) Health(c *gin.Context) {
 	c.JSON(http.StatusOK, helper.GenerateBaseResponse("working", true, 0))
 	return
 }
- 
